--- a/include/bootstrap-3.3.7/docs/examples/cover/index.html
+++ b/include/bootstrap-3.3.7/docs/examples/cover/index.html
@@ -56,7 +56,7 @@
             <h1 class="cover-heading">Cover your page.</h1>
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+              <a href="#" class="btn btn-lg btn-default" onclick="redirection()">Learn more</a>
             </p>
           </div>
 
@@ -80,5 +80,12 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
+    <script type="text/javascript">
+      
+        function redirection() {
+          document.location.href = 'index.php?module=accueil'
+        }
+    </script>
   </body>
 </html>
