--- a/modules/mod_proposer/proposer.css
+++ b/modules/mod_proposer/proposer.css
@@ -1,11 +1,13 @@
-body {
+.body {
   padding-top: 40px;
   padding-bottom: 40px;
+
+}
+.container{
   background-color: #eee;
 }
-
 .form-signin {
-  max-width: 330px;
+  max-width: 500px;
   padding: 15px;
   margin: 0 auto;
 }
@@ -25,6 +27,7 @@ body {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
+
   padding: 10px;
   font-size: 16px;
 }
@@ -32,5 +35,4 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.btn {
-}
+
