--- a/include/template.css
+++ b/include/template.css
@@ -1,22 +1,52 @@
-body {
 
-  font-weight: 300;
-  background-color: #EEEEEE;
+body {
+	font-family: century gothic, sans-serif;
+  	width: 100%;
+  	font-weight: 300;
+  	background-color: #EEEEEE;
 }
 
 nav {
-	/*position: static;*/
-	/*z-index: 1030;*/
-	overflow: visible;
-	background: #0D5D66;
+	width: 100%;
+	background-color: #0D5D66;
+	margin-bottom: 200px;
 }
 
 
-footer {
-	display:flex;
-	align-items:center;
-	background: #0D5D66;
-	color: #FFFFFF;
-	padding: 20px 0;
-	margin-top: 105px;
+.copyright{
+    background-color:#f0f0f0;
 }
+
+.copyright p{
+   margin:15px 0px;
+}
+
+footer{
+	width: 100%;
+	height: 50px;
+	background-color:#00404C;
+	margin-top: 100px;
+	padding: 60px 0px;
+}
+
+footer .menu li a{
+	color:#FFFFFF;
+	padding:10px;
+	text-decoration:none;
+}
+
+footer .menu li a:hover{
+	color:#FFD54F;
+}
+
+.icon-facebook, .icon-twitter , .icon-instagram {
+	color:#FFFFFF;
+	font-size:20px;
+	padding:10px;
+}
+
+
+.icon-facebook:hover , .icon-twitter:hover  , .icon-instagram:hover  {
+	color:#FFCA28;
+}
+
