--- a/include/template.css
+++ b/include/template.css
@@ -6,10 +6,16 @@ body {
   	background-color: #EEEEEE;
 }
 
+
 nav {
-	width: 100%;
-	background-color: #0D5D66;
-	margin-bottom: 200px;
+  width: 100%;
+  /*height: 50px;*/
+  
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: #0D5D66;
+  /*margin-bottom: 70px;*/
+
 }
 
 
