--- a/modules/mod_choisir/choisir.css
+++ b/modules/mod_choisir/choisir.css
@@ -10,6 +10,9 @@ body {
 nav {
   width: 100%;
   /*height: 50px;*/
+  
+  padding-top: 5px;
+  padding-bottom: 5px;
   background-color: #0D5D66;
   margin-bottom: 70px;
 
