--- a/modules/mod_connexion/connexion.css
+++ b/modules/mod_connexion/connexion.css
@@ -10,11 +10,13 @@ body {
 nav {
   width: 100%;
   /*height: 50px;*/
+  
+  padding-top: 5px;
+  padding-bottom: 5px;
   background-color: #0D5D66;
   margin-bottom: 70px;
 
 }
-
 
 .copyright{
     background-color:#f0f0f0;
