--- a/modules/mod_favoris/favoris.css
+++ b/modules/mod_favoris/favoris.css
@@ -7,9 +7,13 @@ body {
 
 }
 
+
 nav {
   width: 100%;
   /*height: 50px;*/
+  
+  padding-top: 5px;
+  padding-bottom: 5px;
   background-color: #0D5D66;
   margin-bottom: 70px;
 
@@ -51,4 +55,73 @@ footer .menu li a:hover{
 
 .icon-facebook:hover , .icon-twitter:hover  , .icon-instagram:hover  {
   color:#FFCA28;
+}
+
+/*LIST RECETTE*/
+
+/*    LISTE RECETTES    */
+
+.button {
+  width: 200px;
+  border-radius: 8px;
+  height: 50px;
+  position: absolute;
+  padding: 0px;
+  z-index: 99;
+  background-color: #FFCA28;
+  text-align: center;
+  font-size: 25px;
+  font-weight: 150;
+  color: #FFFFFF; 
+  margin-left: 60px;
+  
+}
+
+.button:hover {
+  background-color:  #FFD54F;
+  color: white;s
+}
+
+.img_overlay {
+  background-image: url('images/liste_recette3.jpg');
+}
+
+
+.circle {
+  margin-right: 140px;
+  margin-bottom: 100px;
+  text-align: center;
+  font-weight: 300;
+  font : 150% century gothic, sans-serif;
+    text-transform : uppercase;
+    letter-spacing : 0.3em;
+    text-align : center;
+}
+
+
+
+input[type=text] {
+  width: 130px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('images/search2.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    margin-left: -100px;
+}
+
+
+input[type=text]:focus {
+  width: 100%;
+}
+
+
+.caption {
+  margin-bottom: 70px;
 }
