--- a/modules/mod_offre/offre.css
+++ b/modules/mod_offre/offre.css
@@ -7,9 +7,13 @@ body {
 
 }
 
+
 nav {
   width: 100%;
   /*height: 50px;*/
+  
+  padding-top: 5px;
+  padding-bottom: 5px;
   background-color: #0D5D66;
   margin-bottom: 70px;
 
