--- a/modules/mod_profil/profil.css
+++ b/modules/mod_profil/profil.css
@@ -4,12 +4,14 @@ body {
     width: 100%;
     font-weight: 300;
     background-color: #EEEEEE;
-
 }
 
 nav {
   width: 100%;
   /*height: 50px;*/
+  
+  padding-top: 5px;
+  padding-bottom: 5px;
   background-color: #0D5D66;
   margin-bottom: 70px;
 
@@ -52,3 +54,107 @@ footer .menu li a:hover{
 .icon-facebook:hover , .icon-twitter:hover  , .icon-instagram:hover  {
   color:#FFCA28;
 }
+
+
+/*CONSULTER PROFIL*/
+
+.page {
+  margin-left: 170px;
+
+}
+
+
+
+.params-list {
+  margin-bottom: 30px;
+  list-style-type: none;
+  margin-left: 220px;
+  margin-right: 400px;
+}
+
+
+.params-list-title {
+
+  margin-bottom: 15px;
+}
+
+.params-list .params-list-title {
+  font-size: 20px;
+  padding-left: 10px;
+  padding-top: 10px
+  padding-bottom:6px;
+  position: relative;
+
+  border-right: 0px none;
+  border-left: 0px none;
+  border-top: 0px none;
+  background-color: #FFCA28;
+  border: 1px solid #E4E3E3;
+  color: #F1F3F2;
+  text-transform: uppercase;
+  min-height: 16.5px;
+  height: auto;
+  margin-bottom: 0px;
+  list-style-type: none;
+}
+
+.params {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
+
+.params-title {
+  font-size: 15px;
+  display: inline-block;
+  width: 120px;
+  margin-left: 20px;
+  /*border-right: 1px solid black;*/
+}
+
+
+
+
+.bandeau_perso {
+  background: transparent url("images/ingredients.jpg") no-repeat scroll 0% 0%;
+  width: 100%;
+  max-width: 1024px;
+  height: 58px;
+  padding: 12px 0px;
+  position: relative;
+  text-align: center;
+
+}
+
+.bienvenue {
+  display: inline-block;
+  height: 35.5px;
+  font-size: 35px;
+  font-family: "Lobster Two", sans-serif;
+  padding: 0px 28px;
+  background-color: #FFFFFF;
+  color: #FFCA28;
+  text-align: center;
+  background-image: none;
+  background-repeat: repeat;
+  background-attachment: scroll;
+  background-position: 0% 0%;
+  background-clip: border-box;
+  background-origin: padding-box;
+  background-size: auto auto;
+}
+
+.trait {
+  width: 25px;
+
+  display: inline-block;
+  border: 1px solid #F1F3F2;
+  top: -7px;
+  position: relative;
+  margin: 0px 10px;
+}
+
+#btnmodif {
+  margin-left: 450px;
+}
+
