--- a/modules/mod_proposer/proposer.css
+++ b/modules/mod_proposer/proposer.css
@@ -7,9 +7,13 @@ body {
 
 }
 
+
 nav {
   width: 100%;
   /*height: 50px;*/
+  
+  padding-top: 5px;
+  padding-bottom: 5px;
   background-color: #0D5D66;
   margin-bottom: 70px;
 
@@ -53,8 +57,10 @@ footer .menu li a:hover{
   color:#FFCA28;
 }
 
-.container{
-  background-color: #eee;
+
+/*    PROPOSER    */
+.containe{
+  background-color: #D6CBC7;
 }
 .form-signin {
   max-width: 500px;
