--- a/modules/mod_recette/recette.css
+++ b/modules/mod_recette/recette.css
@@ -7,11 +7,15 @@ body {
 
 }
 
+
 nav {
-	width: 100%;
-	/*height: 50px;*/
-	background-color: #0D5D66;
-	margin-bottom: 70px;
+  width: 100%;
+  /*height: 50px;*/
+  
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: #0D5D66;
+  margin-bottom: 70px;
 
 }
 
@@ -81,6 +85,11 @@ footer .menu li a:hover{
 	background-image: url('images/liste_recette3.jpg');
 }
 
+.search-form {
+	color: #333333;
+	margin-left: 200px;
+	margin-bottom: 50px;
+}
 
 input[type=text] {
 	width: 130px;
@@ -95,15 +104,13 @@ input[type=text] {
     padding: 12px 20px 12px 40px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
+    margin-left: -100px;
 }
 
 
 input[type=text]:focus {
 	width: 100%;
 }
-
-
-/*superposer les 2 titres: http://oseox.fr/css/flottement-superposition.html*/
 
 
 .caption {
@@ -202,6 +209,7 @@ input[type=text]:focus {
 .info-budget {
 	flex-grow: 0.2;
 	flex-shrink: 1;
+
 }
 
 .info-budget-title {
@@ -223,5 +231,11 @@ input[type=text]:focus {
 	margin-left: 100px;
 
 
+	
+}
+
+
+.button-favoris {
+	margin-left: 700px;
 	
 }
